name:                HASKELLPONG
version:             1.0
category:            Game
build-type:          Simple
cabal-version:       >=1.10
executable HASKELLPONG
  main-is:             Main.hs
  ghc-options:         
  build-depends:       base >=4.7 && < 5
                      ,gloss==1.13.1.1
                                            
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-modules:       ImagensBase
